# wasmy

./: .gitignore  Cargo.toml  justfile
demo/: Cargo.toml
demo/src/: lib.rs
iii/: Cargo.toml
iii/src/: interpreter.rs  main.rs  parser.rs  validator.rs
wasmi/: Cargo.toml
wasmi/src/: lib.rs
