[package]
name = "iii"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.4", features = ["derive"] }
nom = "7.1.3"
nom-supreme = "0.8.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
